--- a/Defining the SQIF.ipynb
+++ b/Defining the SQIF.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-16T11:04:34.804077200Z",
+     "start_time": "2025-10-16T11:04:34.004164200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Imports as always...\n",
